# quickclip_cli

./: .gitignore  Cargo.toml  README.md  a.lol  makefile
config/: config.json
src/: colors.rs  config.rs  file.rs  main.rs  quickclip.rs  spinner.rs
