[package]
name = "quickclip_cli"
version = "0.1.0"
edition = "2021"
authors = ["MikMueller"]
license = "GPL-2.0-only"
description = "A CLI to interact with QuickClip from the terminal"
repository = "https://github.com/MikMuellerDev/quickclip_cli"
keywords = ["terminal", "cli"]
categories = ["text", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = '1.0.73'
serde = { version = "1.0.132", features = ["derive"]}
reqwest = { version = "0.11.8", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
structopt = "0.3.25"
base64 = "0.13.0"
deflate = "1.0.0"
inflate = "0.4.5"
